# pyxos

./: .gitignore  .travis.yml  README.rst  main.py  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
pyxos/: __init__.py  farm.py  main.py  mule.py  run.sh  setup_hooks.py  state_machine.py
pyxos/lib/: state_machine.py
pyxos/roles/: leader.py  replica.py  scout.py
pyxos/tests/: test_farm.py  test_replica.py  test_state_machine.py
