[metadata]
name = pyxos
version = 0.1
summary = Paxos python implementation
description-file =
    README.rst
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2

[files]
packages =
    pyxos

[global]
setup-hooks =
    pbr.hooks.setup_hook
    pyxos.setup_hooks.fix_version

[wheel]
universal = 1
